--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,31 +1,19 @@
-<p id="notice"><%= notice %></p>
+<div class="card">
+  <div class="card-body">
+    <h2 class='card-title d-flex justify-content-between mb-4' style="color:#006400">
+      <span><strong>to do lists</strong></span>
+      <%= link_to 'new project', new_project_path, class:'btn btn-primary',  style:"background-color:#006400" %>
+    </h2>
 
-<h1>Projects</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= project.description %></td>
-        <td><%= project.user_id %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <% @projects.each do |project| %>
+    <%= link_to project do %>
+      <div class="card">
+        <div class="card-body">
+          <h5 class='card-title' style="color:#006400"><%= project.name.downcase %></h5>
+          <p><small><%= project.description %> </small></p>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+  <% end %>
+  </div>
+</div>
