--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Project</h1>
+<%= link_to 'back', @project, class: 'btn btn-secondary btn-sm mb-1', style: 'background-color:#730101' %>
+<div class="card">
+  <div class="card-body">
+    <h2 class='card-title d-flex justify-content-between mb-4' style="color:#730101">
+      <span><strong>edit project</strong></span>
+    </h2>
 
-<%= render 'form', project: @project %>
+    <%= render 'form', project: @project %>
+  </div>
+</div>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
