successfully adding tasks to list, looking good

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,6 +9,11 @@
     <%= link_to project, class: 'text-decoration-none' do %>
       <div class="card project-card">
         <div class="card-body">
+          <span class='text-secondary'>
+            <small>
+              <%= project.percent_complete %>% complete
+            </small>
+
           <h5 class='card-title' style="color:#006400"><%= project.name.downcase %></h5>
           <p style="color:#730101"><strong><small><%= project.description %> </small></strong></p>
         </div>
