--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -2,7 +2,7 @@
 <div class="card">
   <div class="card-body">
     <h2 class='card-title d-flex justify-content-between mb-4' style="color:#730101">
-      <span><strong>edit project</strong></span>
+      <span><strong>edit to do list</strong></span>
     </h2>
 
     <%= render 'form', project: @project %>
